fix: wait action & jetbrains annotations & warnings